[package]
name = "rust-cri"
version = "0.1.0"
authors = ["Matt Spencer <matthew@thespencers.me.uk>"]
edition = "2018"

[[bin]] # Bin to run the CRI gRPC server
name = "cri-server"
path = "src/cri-server.rs"

[dependencies]
tonic = { version = "0.4", features = [] }
prost = "0.7"
tokio = { version = "1.0.2", features = ["full"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }


[build-dependencies]
tonic-build = "0.4"
