[package]
name = "rust-cri"
version = "0.1.0"
authors = ["Matt Spencer <matthew@thespencers.me.uk>"]
edition = "2018"


[dependencies]
tonic = { version = "0.4", features = ["tls"] }
prost = "0.7"
tokio = { version = "1.0.2", features = ["full"] }
async-stream = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
clap = "3.0.0-beta.2"


[build-dependencies]
tonic-build = "0.4"
